# heapview

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: tests.yml
src/: lib.rs  main.rs
src/analyzer/: mod.rs
src/analyzer/fixtures/: simple.json
src/backend/: lib.rs  mod.rs
src/backend/routes/: analysis.rs  mod.rs
src/ui/: package.json  snowpack.config.json
src/ui/public/: index.html
src/ui/src/: App.css  App.tsx
src/ui/src/components/Chart/: Chart.css  Chart.tsx  Slice.tsx  entriesFormatter.ts
src/ui/src/components/ReferenceTable/: ReferenceTable.tsx  index.ts
src/ui/src/utils/: index.ts  randomColor.ts
ui/: README.md  package-lock.json
ui/src/: App.tsx
